fix garbage collection flag